--- a/index.html
+++ b/index.html
@@ -1,59 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Lorem Ipsum</title>
-        <link rel="stylesheet" href="css/estilo.css">
-    </head>
-    <body>
-        <header>
-            <div id="logo">
-                <img src="img/logoALT.gif" alt>
-            </div>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Toby Flexbox</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+  <header class="header">
+    <div class="logo"><img src="img/logo.gif" width="256" alt=""></div>
+    <nav class="navbar">
+      <a href="#">Home</a>
+      <a href="#">Sobre</a>
+      <a href="#">Contato</a>
+    </nav>
+  </header>
 
-            <div id="menu">
-                <ul>
-                    <li><a href="#"> Home</a></li>
-                    <li><a href="#"> Conteúdo</a></li>
-                    <li><a href="#"> FAQ</a></li>
-                </ul>
-            </div>
-        </header>
+  <main class="main">
+    <section class="sobre">
+      <h2>Sobre...</h2>
+      <p>Lorem ipsum dolor sit amet.</p>
+      <p>Lorem ipsum dolor sit amet consectetur.</p>
+      <div>
+        <img src="https://media1.tenor.com/m/ogNrdkb2LhgAAAAC/toby-fox-undertale.gif" alt="Imagem sobre">
+      </div>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+      <p>Lorem ipsum dolor sit.</p>
+    </section>
 
-        <article>
-            <div id="texto">
-                <h1>Boas-vindas!</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
-                    facilisis mattis lorem quis congue. Vestibulum facilisis dolor
-                    risus, sed aliquam nisi mollis vel. Vestibulum in gravida erat.
-                    Nunc sed nulla laoreet, elementum magna a, vulputate nulla.
-                    Nulla feugiat tristique sem quis venenatis. Mauris aliquam
-                    sodales nibh, luctus dictum quam blandit ut. In cursus mi at
-                    ipsum interdum ornare. Aliquam erat volutpat. Nulla feugiat elit
-                    non tellus tristique, sed gravida ex tristique. Maecenas orci
-                    metus, volutpat eget porta dignissim, mattis ac nulla. Praesent
-                    facilisis pulvinar magna. Ut malesuada aliquet velit non
-                    maximus. Ut pellentesque libero commodo ornare lacinia. Mauris
-                    nec lacinia purus. Curabitur bibendum lacinia viverra.</p>
-                <p>Interdum et malesuada fames ac ante ipsum primis in faucibus.
-                    Vestibulum convallis fermentum vulputate. Maecenas faucibus
-                    facilisis nulla vel maximus. Etiam volutpat posuere sodales.
-                    Vestibulum vestibulum fringilla neque id volutpat. Nam nec metus
-                    et neque finibus imperdiet ac at risus. Cras nec urna quis nulla
-                    tincidunt luctus quis in nibh. Pellentesque quis pulvinar
-                    tortor. Sed ultricies urna nec urna bibendum, at faucibus felis
-                    posuere. Cras mattis arcu sit amet nibh elementum, quis
-                    fringilla risus eleifend. Etiam id enim eget sapien venenatis
-                    pulvinar.</p>
-            </div>
-            <div id="img">
-                <img src="img/dance.webp" alt="">
-            </div>
-        </article>
-            
-        <footer>
-            <p><img src="img/foamton.png" alt=""> &copy; 1225-2025 Nenhum direito reservado</p>
-        </footer>
-    </body>
+    <aside class="curiosidade">
+      <h2>Fato curioso</h2>
+      <div class="curiosidade-item">
+        <p>Lorem ipsum dolor.</p>
+        <img src="https://media1.tenor.com/m/76R1rBHApAYAAAAC/deltarune-toby-fox.gif" alt="Imagem curiosidade 1">
+      </div>
+      <div class="curiosidade-item">
+        <p>Lorem ipsum dolor sit amet consectetur.</p>
+        <img src="https://media1.tenor.com/m/kqFzhmqTTaoAAAAC/annoying-dog-deltarune.gif" alt="Imagem curiosidade 2">
+      </div>
+    </aside>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Alguns direitos reservados</p>
+    <a href="https://github.com/viinb/p2"><img src="img/github.png"></a>
+    <img src="https://media1.tenor.com/m/-_q5E02A97oAAAAC/idle-pixel.gif" alt="">
+  </footer>
+</body>
 </html>
