--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <footer>
     <p>&copy; 2025 Alguns direitos reservados</p>
     <a href="https://github.com/viinb/p2"><img src="img/github.png"></a>
-    <img src="https://media1.tenor.com/m/-_q5E02A97oAAAAC/idle-pixel.gif" alt="">
+    <a href="https://x.com/tobyfox"><img src="https://media1.tenor.com/m/-_q5E02A97oAAAAC/idle-pixel.gif" alt=""></a>
   </footer>
 </body>
 </html>
