--- a/index.html
+++ b/index.html
@@ -1,77 +1,71 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Toby F(lexb)ox</title>
-    <link rel="stylesheet" href="css/estilo.css">
-    <link rel="icon" href="img/spr_dogshrine_dog.gif" type="image/x-icon">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Toby F(lexb)ox</title>
+  <link rel="stylesheet" href="css/estilo.css" />
+  <link rel="icon" href="img/spr_dogshrine_dog.gif" type="image/x-icon" />
 </head>
 
 <body>
+  <header class="header">
+    <div class="logo">
+      <img src="https://media.tenor.com/x1QOy0SBJW8AAAAj/toby-fox.gif" alt="Toby" width="64" />
+      <img src="img/logo.gif" alt="Logo" width="256" />
+    </div>
+    <nav class="navbar">
+      <a href="#">HOME</a>
+      <a href="#">CONTATO</a>
+    </nav>
+  </header>
 
-    <!-- Header -->
-    <header class="header">
-        <div class="logo">
-            <img src="https://media.tenor.com/x1QOy0SBJW8AAAAj/toby-fox.gif" alt="Toby" width="64">
-            <img src="img/logo.gif" alt="Logo" width="256">
+  <main class="main">
+    <section class="sobre">
+      <h2><img src="img/spr_dogshrine_dog.gif" alt="" width="64"> Sobre</h2>
+      <div class="sobre-conteudo">
+        <div class="imagem-sobre">
+          <img src="https://media1.tenor.com/m/9Y7N2cyeozAAAAAC/deltarune-tomarrow-joyus-fox.gif" alt="Toby">
         </div>
-        <nav class="navbar">
-            <a href="#">HOME</a>
-            <a href="#">CONTATO</a>
-        </nav>
-    </header>
-
-    <!-- Main -->
-    <main class="main">
-
-        <!-- Seção Sobre -->
-        <section class="sobre">
-            <div class="sobre-topo">
-                <h2><img src="img/spr_dogshrine_dog.gif" alt="Icone" width="48"> Sobre</h2>
-                <p>* Blá blá blá</p>
-            </div>
-            <div class="imagem-grande">
-                <img src="https://media1.tenor.com/m/9Y7N2cyeozAAAAAC/deltarune-tomarrow-joyus-fox.gif"
-                    alt="Imagem grande">
-            </div>
-            <div class="sobre-rodape">
-                <p>* Blá blá blá</p>
-            </div>
-        </section>
-
-        <!-- Seção Curiosidade -->
-        <aside class="curiosidade">
-            <div class="curiosidade-topo">
-                <h2><img src="img/heart.png" alt="" width="24"> Fato curioso</h2>
-                <img src="https://static.wikia.nocookie.net/undertale/images/0/07/Annoying_Dog_overworld_dangling.gif"
-                    width="64" alt="Toby">
-                <p>* Blá blá blá</p>
-            </div>
-            <div class="imagem-curiosidade">
-                <img src="https://media1.tenor.com/m/IEqTPBqY7ncAAAAC/toby-fox-annoying-dog.gif" alt="Toby">
-            </div>
-        </aside>
-    </main>
-
-    <!-- Footer -->
-    <footer class="footer">
-        <p class="copyright">&copy; 2025 - Todos direitos não reservados</p>
-        <div class="links-footer">
-            <a href="#"><img
-                    src="https://static.wikia.nocookie.net/undertale/images/6/6e/Annoying_Dog_overworld_bomb.gif"
-                    alt=""></a>
-            <a href="#"><img src="https://static.wikia.nocookie.net/undertale/images/7/7d/Annoying_Dog_sprite_bone.gif"
-                    alt=""></a>
-            <a href="https://github.com/viinb/p2"><img src="img/github.png" alt="github"></a>
-            <a href="https://open.spotify.com/intl-pt/artist/57DlMWmbVIf2ssJ8QBpBau"><img src="img/spotify.png" alt="spotify"></a>
-            <a href="https://www.youtube.com/@toby-fox-music"><img src="img/youtube.png" alt="yotube"></a>
-            <a href="https://x.com/tobyfox"><img src="img/x.png" alt="x"></a>
-            <a href="#"><img src="https://static.wikia.nocookie.net/undertale/images/0/0b/Annoying_Dog_sprite.gif"
-                    alt=""></a>
+        <div class="caixa-texto">
+          <p>* Blá blá blá</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          <p>Aliquam eget sapien sapien. Curabitur in metus urna.</p>
         </div>
-    </footer>
+      </div>
+       <p>* Blá blá blá</p>
+    </section>
+
+    <aside class="curiosidade">
+      <h2><img src="img/heart.png" alt="" width="24"> Fato curioso</h2>
+      <div class="imagem-dog">
+        <img src="https://static.wikia.nocookie.net/undertale/images/0/07/Annoying_Dog_overworld_dangling.gif" width="64" alt="Toby">
+        <div class="caixa-texto">
+          <p>* Blá blá blá</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          <p>Aliquam eget sapien sapien. Curabitur in metus urna.</p>
+        </div>
+      </div>
+      <p>* Blá blá blá</p>
+      <div class="curiosidade-conteudo">
+        <div class="imagem-curiosidade">
+          <img src="https://media1.tenor.com/m/IEqTPBqY7ncAAAAC/toby-fox-annoying-dog.gif" alt="Toby">
+        </div>
+      </div>
+    </aside>
+  </main>
+
+  <footer class="footer">
+    <p class="copyright">&copy; 2025 - Todos direitos não reservados</p>
+    <div class="links-footer">
+      <a href="#"><img src="https://static.wikia.nocookie.net/undertale/images/6/6e/Annoying_Dog_overworld_bomb.gif" alt=""></a>
+      <a href="#"><img src="https://static.wikia.nocookie.net/undertale/images/7/7d/Annoying_Dog_sprite_bone.gif" alt=""></a>
+      <a href="#"><img src="img/github.png" alt="github"></a>
+      <a href="https://open.spotify.com/intl-pt/artist/57DlMWmbVIf2ssJ8QBpBau"><img src="img/spotify.png" alt="spotify"></a>
+      <a href="https://www.youtube.com/@toby-fox-music"><img src="img/youtube.png" alt="youtube"></a>
+      <a href="https://x.com/tobyfox"><img src="img/x.png" alt="x"></a>
+      <a href="#"><img src="https://static.wikia.nocookie.net/undertale/images/0/0b/Annoying_Dog_sprite.gif" alt=""></a>
+    </div>
+  </footer>
 </body>
-
 </html>
