--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div class="links-footer">
       <a href="#"><img src="https://static.wikia.nocookie.net/undertale/images/6/6e/Annoying_Dog_overworld_bomb.gif" alt=""></a>
       <a href="#"><img src="https://static.wikia.nocookie.net/undertale/images/7/7d/Annoying_Dog_sprite_bone.gif" alt=""></a>
-      <a href="#"><img src="img/github.png" alt="github"></a>
+      <a href="https://github.com/viinb/p2"><img src="img/github.png" alt="github"></a>
       <a href="https://open.spotify.com/intl-pt/artist/57DlMWmbVIf2ssJ8QBpBau"><img src="img/spotify.png" alt="spotify"></a>
       <a href="https://www.youtube.com/@toby-fox-music"><img src="img/youtube.png" alt="youtube"></a>
       <a href="https://x.com/tobyfox"><img src="img/x.png" alt="x"></a>
